K8s/apps/firstclick/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firstclick-service
  namespace: firstclick
spec:
  selector:
    app: firstclick
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
