K8s/apps/firstclick/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firstclick-ingress
  namespace: firstclick
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: firstclick.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firstclick-service
                port:
                  number: 80
